src/test/ui/conditional-compilation/cfg-attr-unknown-attribute-macro-expansion.stderr
error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-attr-unknown-attribute-macro-expansion.rs:3:27
   |
LL |         #[cfg_attr(all(), unknown)]
   |                           ^^^^^^^
...
LL | foo!();
   | ------- in this macro invocation

error: aborting due to previous error

